<resources>
    <string name="app_name">Project3</string>
    <string name="question_1">Question 1</string>
    <string name="question_1_text">How many golden balls has Cristiano Ronaldo ever won?</string>
    <string name="question_2">Question 2</string>
    <string name="question_2_text">In which country was Lionel Messi born?</string>
    <string name="question_2_option_1">Argentina</string>
    <string name="question_2_option_2">France</string>
    <string name="question_2_option_3">England</string>
    <string name="question_3">Question 3</string>
    <string name="question_3_text">In what city was Cristiano Ronaldo born?</string>
    <string name="question_3_option_1">Lisbon</string>
    <string name="question_3_option_2">Porto</string>
    <string name="question_3_option_3">Madeira</string>
    <string name="question_4">Question 4</string>
    <string name="question_4_text">Which of these clubs has Cristiano Ronaldo played in?</string>
    <string name="question_4_option_1">Juventus</string>
    <string name="question_4_option_2">Real Madrid</string>
    <string name="question_4_option_3">Sporting</string>
    <string name="question_4_option_4">Manchester United</string>
    <string name="question_4_option_5">Milan</string>
    <string name="question_5">Question 5</string>
    <string name="question_5_text">Which of these clubs has Lionel Messi never played in?</string>
    <string name="question_5_option_1">Lyon</string>
    <string name="question_5_option_2">Monaco</string>
    <string name="question_5_option_3">Real Madrid</string>
    <string name="question_5_option_4">Milan</string>
    <string name="question_5_option_5">Barcelona</string>
    <string name="question_6">Question 6</string>
    <string name="question_6_text">How old was Cristiano Ronaldo when he moved to Manchester United?</string>
    <string name="question_6_option_1">17</string>
    <string name="question_6_option_2">18</string>
    <string name="question_6_option_3">19</string>
    <string name="question_7">Question 7</string>
    <string name="question_7_text">How old was Lionel Messi when he won his first golden ball?</string>
    <string name="question_7_option_1">20</string>
    <string name="question_7_option_2">21</string>
    <string name="question_7_option_3">22</string>
    <string name="question_8">Question 8</string>
    <string name="question_8_text">What year did Cristiano Ronaldo win his first golden ball?</string>
    <string name="question_9">Question 9</string>
    <string name="question_9_text">In what years did Lionel messi win the UEFA Champions League?</string>
    <string name="question_9_option_1">2004–2005</string>
    <string name="question_9_option_2">2005–2006</string>
    <string name="question_9_option_3">2010–2011</string>
    <string name="question_9_option_4">2016–2017</string>
    <string name="question_10">Question 10</string>
    <string name="question_10_text">Which of the two players won the most golden balls?</string>
    <string name="question_10_option_1">Cristiano Ronaldo</string>
    <string name="question_10_option_2">Lionel Messi</string>
    <string name="check_score">Check Score</string>
    <string name="send_results_to_mail">Send results to mail</string>
    <string name="results">Results</string>
    <string name="score">Correct answers: %d/%d</string>

</resources>
